...
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayBeachesActivity" />

    <Button
        android:id="@+id/profilePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="My Profile" />

    <Button
        android:id="@+id/beach_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/beaches_map"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="25dp"
        android:onClick="onClickBeach"
        android:text="Choose Highlighted Beach" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_alignBottom="@+id/beach_go"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="80dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="Input starting address"
...
