...
        android:text="Logout"
        android:backgroundTint="#0ED6B9"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintRight_toRightOf="@id/address"
        app:layout_constraintLeft_toLeftOf="@id/address"
        app:layout_constraintTop_toBottomOf="@id/viewRoutes"

        />

    <Button
        android:id="@+id/updateInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0ED6B9"
        android:onClick="update"
        android:text="Update"
        android:textColor="@color/white"
...
